Added Kafka configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
+kafka.bootstrapAddress=localhost:9092
+kafka.group.id="groupId"
+kafka.contest.sign.up.topic = contest-sign-up
+
 finnhub.base.url=https://finnhub.io/api/v1
 
