Added integration test for contest controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.jpa.hibernate.ddl-auto=none
 
 kafka.bootstrapAddress=localhost:9092
 kafka.group.id="groupId"
+kafka.partitions=6
+kafka.replication.factor=1 
+
 kafka.contest.sign.up.topic = contest-sign-up
 
 finnhub.base.url=https://finnhub.io/api/v1
