--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,13 @@
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-kafka.bootstrapAddress=localhost:9092
+spring.datasource.url=jdbc:mysql://stock-comp-mysql:3306/stockcompdb?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=user
+spring.datasource.password=password
+
+kafka.bootstrapAddress=kafka:9092
 kafka.group.id="groupId"
 kafka.partitions=6
 kafka.replication.factor=1 
