--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
 
   #Mysql Database
@@ -30,6 +30,23 @@ services:
       - "3306:3306"
     volumes:
       - mysql-volume:/var/lib/mysql
+
+    #Spring Boot comp prog server
+  stock-comp-server:
+    image: stock-comp-server
+    build: .
+    depends_on:
+      - stock-comp-mysql
+      - kafka
+      - zookeeper
+    restart: on-failure
+    environment:
+      - SPRING_DATASOURCER_URL=jdbc:mysql://stock-comp-mysql:3306/stockcompdb?useSSL=false&allowPublicKeyRetrieval=true
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=password
+    ports:
+      - "8080:8080"
+      - "5005:5005"
 
 volumes:
   mysql-volume:
