--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - mysql-volume:/var/lib/mysql
 
-    #Spring Boot comp prog server
+  #Spring Boot app
   stock-comp-server:
     image: stock-comp-server
     build: .
@@ -41,6 +41,7 @@ services:
       - zookeeper
     restart: on-failure
     environment:
+      - FINNHUB_API_KEY=${FINNHUB_API_KEY}
       - SPRING_DATASOURCER_URL=jdbc:mysql://stock-comp-mysql:3306/stockcompdb?useSSL=false&allowPublicKeyRetrieval=true
       - SPRING_DATASOURCE_USERNAME=user
       - SPRING_DATASOURCE_PASSWORD=password
