--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,16 @@ spring.datasource.url=jdbc:mysql://stock-comp-mysql:3306/stockcompdb?useSSL=fals
 spring.datasource.username=user
 spring.datasource.password=password
 
-kafka.bootstrapAddress=kafka:9092
-kafka.group.id="groupId"
-kafka.partitions=6
-kafka.replication.factor=1 
+spring.kafka.consumer.bootstrap-servers: kafka:9092
+spring.kafka.consumer.group-id: group-id
+spring.kafka.consumer.auto-offset-reset: earliest
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-kafka.contest.sign.up.topic = contest-sign-up
+spring.kafka.producer.bootstrap-servers: kafka:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 finnhub.base.url=https://finnhub.io/api/v1
 
