--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,29 @@ services:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
 
+
+  #Prometheus
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+    - ./src/main/resources/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+    - "9090:9090"
+
+  #Grafana
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+
   #Mysql Database
   stock-comp-mysql:
     image: mysql:8.0
+    container_name: mysql
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=stockcompdb
@@ -34,6 +54,7 @@ services:
   #Spring Boot app
   stock-comp-server:
     image: stock-comp-server
+    container_name: stock-comp
     build: .
     depends_on:
       - stock-comp-mysql
