--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,9 @@ spring.kafka.producer.bootstrap-servers: kafka:9092
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
+#Spring Boot Actuatator properties
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
 finnhub.base.url=https://finnhub.io/api/v1
 
