--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,6 @@
 version: '3'
 
 services:
-  #Zookeeper
-  zookeeper:
-    image: wurstmeister/zookeeper
-    container_name: zookeeper
-    ports:
-      - "2181:2181"
-
-  #Kafka
-  kafka:
-    image: wurstmeister/kafka
-    container_name: kafka
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-
 
   #Prometheus
   prometheus:
@@ -34,10 +17,12 @@ services:
     container_name: grafana
     ports:
       - "3000:3000"
+    volumes:
+    - grafana-volume:/var/lib/grafana
     depends_on:
       - prometheus
 
-  #Mysql Database
+  #MySql Database
   stock-comp-mysql:
     image: mysql:8.0
     container_name: mysql
@@ -58,8 +43,6 @@ services:
     build: .
     depends_on:
       - stock-comp-mysql
-      - kafka
-      - zookeeper
     restart: on-failure
     environment:
       - FINNHUB_API_KEY=${FINNHUB_API_KEY}
@@ -71,5 +54,6 @@ services:
       - "5005:5005"
 
 volumes:
+  grafana-volume:
   mysql-volume:
     driver: "local"
