Returning cookie in authentication response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 finnhub.base.url=https://finnhub.io/api/v1
+
+cookie.duration=604800
