Added consumer service for symbol search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,8 @@ management.endpoint.health.show-details=always
 
 finnhub.base.url=https://finnhub.io/api/v1
 
-cookie.duration=604800
+token.secret=tokensecret
+token.expiration=3600000
+token.refresh.expiration=776000000
+token.name=accesstoken
+token.refresh.name=refreshtoken
