Added ElasticSearch to docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,13 @@ spring.datasource.url=jdbc:mysql://stock-comp-mysql:3306/stockcompdb?useSSL=fals
 spring.datasource.username=user
 spring.datasource.password=password
 
+spring.data.elasticsearch.cluster-name=es-docker-cluster
+spring.data.elasticsearch.cluster-nodes=es01:9300
+
+#Scheduling
+spring.enable.scheduling=true
+schedule.rate=PT1H
+
 #Spring Boot Actuatator properties
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
