--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,33 @@
 version: '3'
 
 services:
+  #ElasticSearch
+  es01:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.0
+    container_name: es01
+    environment:
+      - node.name=es01
+      - cluster.name=es-docker-cluster
+      - bootstrap.memory_lock=true
+      - cluster.initial_master_nodes=es01
+      - "ES_JAVA_OPTS=-Xms2048m -Xmx2048m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - es-volume:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
 
   #Prometheus
   prometheus:
     image: prom/prometheus
     container_name: prometheus
     volumes:
-    - ./src/main/resources/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./src/main/resources/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
-    - "9090:9090"
+      - "9090:9090"
 
   #Grafana
   grafana:
@@ -18,7 +36,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-    - grafana-volume:/var/lib/grafana
+      - grafana-volume:/var/lib/grafana
     depends_on:
       - prometheus
 
@@ -54,6 +72,7 @@ services:
       - "5005:5005"
 
 volumes:
+  es-volume:
   grafana-volume:
   mysql-volume:
     driver: "local"
