--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,32 @@
 
+#JPA
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
+#Database
 spring.datasource.url=jdbc:mysql://stock-comp-mysql:3306/stockcompdb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=user
 spring.datasource.password=password
 
+#ElasticSearch
 spring.data.elasticsearch.cluster-name=es-docker-cluster
-spring.data.elasticsearch.cluster-nodes=es01:9300
+spring.data.elasticsearch.cluster-nodes=es01:9200
 
 #Scheduling
 spring.enable.scheduling=true
-schedule.rate=PT1H
+schedule.rate=PT30S
+spring.task.scheduling.pool.size=2
 
 #Spring Boot Actuatator properties
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
+#External API
 finnhub.base.url=https://finnhub.io/api/v1
 
+#JWT settings
 token.secret=tokensecret
 token.expiration=3600000
 token.refresh.expiration=776000000
