--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,9 @@ spring.datasource.url=jdbc:mysql://stock-comp-mysql:3306/stockcompdb?useSSL=fals
 spring.datasource.username=user
 spring.datasource.password=password
 
-#ElasticSearch
-spring.data.elasticsearch.cluster-name=es-docker-cluster
-spring.data.elasticsearch.cluster-nodes=es01:9200
-
 #Scheduling
 spring.enable.scheduling=true
-schedule.rate=PT30S
+schedule.rate=PT1H
 spring.task.scheduling.pool.size=2
 
 #Spring Boot Actuatator properties
