Launching symbol search populator as coroutine instead of a scheduled task

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=user
       - SPRING_DATASOURCE_PASSWORD=password
       - ELASTIC_SEARCH_URL=http://es01:9200/
+      - JWT_SECRET=${JWT_SECRET}
     ports:
       - "8080:8080"
       - "5005:5005"
