Converting JwtUtil to a component

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,5 @@ finnhub.base.url=https://finnhub.io/api/v1
 
 #JWT settings
 token.expiration=3600000
+jwt.token.duration=3300
 token.name=accesstoken
