Added refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ management.endpoint.health.show-details=always
 finnhub.base.url=https://finnhub.io/api/v1
 
 #JWT settings
-token.expiration=3600000
+jwt.cookie.duration=3600000
 jwt.token.duration=3300
+jwt.refresh.token.duration=60000000
 token.name=accesstoken
