Added refresh token functionality to token service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,9 @@ management.endpoint.health.show-details=always
 #External API
 finnhub.base.url=https://finnhub.io/api/v1
 
-#JWT settings
+######## JWT settings ########
 jwt.cookie.duration=3600000
-jwt.token.duration=3300
-jwt.refresh.token.duration=60000000
+jwt.access.token.duration=1800000
+#Refresh token duration in days
+jwt.refresh.token.duration=30
 token.name=accesstoken
