Updated user sign out method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ management.endpoint.health.show-details=always
 #External API
 finnhub.base.url=https://finnhub.io/api/v1
 
-######## JWT settings ########
-jwt.cookie.duration=3600000
-jwt.access.token.duration=1800000
+######## Token settings ########
+cookie.duration=3600000
+access.token.duration=1800000
 #Refresh token duration in days
-jwt.refresh.token.duration=30
+refresh.token.duration=30
 token.name=accesstoken
