Updated refresh token endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ finnhub.base.url=https://finnhub.io/api/v1
 
 ######## Token settings ########
 cookie.duration=3600000
-access.token.duration=1800000
+access.token.duration=60000
 #Refresh token duration in days
 refresh.token.duration=30
-token.name=accesstoken
+token.name=accessToken
