Disable auto tasks when running tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,7 @@ spring.datasource.username=user
 spring.datasource.password=password
 
 #Scheduling
-spring.enable.scheduling=true
-schedule.rate=PT1H
-spring.task.scheduling.pool.size=2
+auto.start.tasks=true
 
 #Spring Boot Actuatator properties
 management.endpoints.web.exposure.include=*
