Updated elasticSearch query for symbols

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.password=password
 
 #Scheduling
 auto.start.tasks=true
+symbol.search.delay.time=3600000
 
 #Spring Boot Actuatator properties
 management.endpoints.web.exposure.include=*
