--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ management.endpoint.health.show-details=always
 #External API
 finnhub.base.url=https://finnhub.io/api/v1
 
-######## Token settings ########
+#Token settings
 cookie.duration=3600000
 access.token.duration=60000
 #Refresh token duration in days
