Added quote consumer service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 #External API
-finnhub.base.url=https://finnhub.io/api/v1
+consumer.base.url=http://localhost:8088
 
 #Token settings
 cookie.duration=3600000
