Restructuring of investment returns processing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,10 @@ spring.datasource.username=user
 spring.datasource.password=password
 
 #Scheduling
-auto.start.tasks=true
 symbol.search.delay.time=3600000
+
+#Consumer
+consumer.base.url=http://stock-analyzer:8088
 
 #Spring Boot Actuatator properties
 management.endpoints.web.exposure.include=*
