--- a/kubernetes/stockcomp-service.yaml
+++ b/kubernetes/stockcomp-service.yaml
@@ -1,11 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: stockcomp-service
-  labels:
-    app: stockcomp
+  name: stockcomp
 spec:
-  type: ClusterIP
   selector:
     app: stockcomp
   ports:
