--- a/kubernetes/mysql-secret.yaml
+++ b/kubernetes/mysql-secret.yaml
@@ -1,4 +1,4 @@
-#Generate secrets : echo '<value>' | base64
+#Generate secrets : echo -n '<value>' | base64
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,4 +7,4 @@ type: Opaque
 data:
   username: dXNlcg==
   password: cGFzc3dvcmQ=
-  root-password: cm9vdAo=
+  root-password: cm9vdA==
