--- a/kubernetes/mysql.yaml
+++ b/kubernetes/mysql.yaml
@@ -37,3 +37,16 @@ spec:
               secretKeyRef:
                 name: mysql-secret
                 key: password
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql-service
+spec:
+  selector:
+    app: mysql
+  ports:
+    - protocol: TCP
+      port: 3306
+      targetPort: 3306
