--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 #Database
-spring.datasource.url=jdbc:mysql://stock-comp-mysql:3306/stockcompdb?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=user
 spring.datasource.password=password
 
