--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 #Database
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 #Scheduling
 symbol.search.delay.time=3600000
