--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,13 @@
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 
 #Database
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.hikari.maximum-pool-size=4
 
 #Scheduling
 symbol.search.delay.time=3600000
