--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgresql-volume:/var/lib/postgresql
+      - postgresql-volume:/var/lib/postgresql/data
 
   #Spring Boot app
   stock-comp-server:
