--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
         <java.version>11</java.version>
         <kotlin.version>1.5.31</kotlin.version>
         <testcontainers.version>1.16.0</testcontainers.version>
+        <springfox.version>3.0.0</springfox.version>
+        <kotlinx.coroutines.version>1.5.2</kotlinx.coroutines.version>
+        <mockk.version>1.10.0</mockk.version>
+        <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
+        <micrometer.version>1.6.5</micrometer.version>
+        <maven.failsafe.version>2.22.2</maven.failsafe.version>
     </properties>
 
     <dependencies>
@@ -64,17 +70,17 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
-            <version>3.0.0</version>
+            <version>${springfox.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>3.0.0</version>
+            <version>${springfox.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.3.7</version>
+            <version>${kotlinx.coroutines.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -88,12 +94,12 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
-            <version>1.6.5</version>
+            <version>${micrometer.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <version>${jsonwebtoken.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -119,7 +125,7 @@
         <dependency>
             <groupId>io.mockk</groupId>
             <artifactId>mockk</artifactId>
-            <version>1.10.0</version>
+            <version>${mockk.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -169,7 +175,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>${maven.failsafe.version}</version>
                 <executions>
                     <execution>
                         <goals>
