Added micrometer counter and gauge in services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,11 @@ symbol.search.delay.time=3600000
 consumer.base.url=http://stock-analyzer:8088
 
 #Spring Boot Actuatator properties
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 
 #Token settings
 cookie.duration=3600000
 access.token.duration=60000
-#Refresh token duration in days
 refresh.token.duration=30
 token.name=accessToken
