--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
     <properties>
         <java.version>11</java.version>
         <kotlin.version>1.6.10</kotlin.version>
-        <testcontainers.version>1.16.2</testcontainers.version>
+        <testcontainers.version>1.16.3</testcontainers.version>
         <springfox.version>3.0.0</springfox.version>
-        <kotlinx.coroutines.version>1.6.0-RC3</kotlinx.coroutines.version>
-        <mockk.version>1.12.1</mockk.version>
+        <kotlinx.coroutines.version>1.6.0</kotlinx.coroutines.version>
+        <mockk.version>1.12.2</mockk.version>
         <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
-        <micrometer.version>1.8.1</micrometer.version>
+        <micrometer.version>1.8.2</micrometer.version>
         <maven.failsafe.version>2.22.2</maven.failsafe.version>
     </properties>
 
@@ -42,6 +42,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
