--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ symbol.search.delay.time=3600000
 consumer.base.url=http://stock-analyzer:8088
 
 #Spring Boot Actuatator properties
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=health,info,prometheus,env
 management.endpoint.health.show-details=always
 
 #Token settings
@@ -25,3 +25,8 @@ cookie.duration=3600000
 access.token.duration=60000
 refresh.token.duration=30
 token.name=accessToken
+
+#OAuth2 Google client
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+
