--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <mockk.version>1.12.2</mockk.version>
         <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
         <micrometer.version>1.8.2</micrometer.version>
+        <graphql.version>12.0.0</graphql.version>
         <maven.failsafe.version>2.22.2</maven.failsafe.version>
     </properties>
 
@@ -75,6 +76,11 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
             <version>${springfox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>graphql-spring-boot-starter</artifactId>
+            <version>${graphql.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
