--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
         <micrometer.version>1.8.2</micrometer.version>
         <graphql.version>12.0.0</graphql.version>
-        <graphql.scalars.version>2022-01-08T22-46-25-c2e844f</graphql.scalars.version>
+        <graphql.datetime.verison>4.1.0</graphql.datetime.verison>
         <maven.failsafe.version>2.22.2</maven.failsafe.version>
     </properties>
 
@@ -83,7 +83,11 @@
             <artifactId>graphql-spring-boot-starter</artifactId>
             <version>${graphql.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.zhokhov.graphql</groupId>
+            <artifactId>graphql-datetime-spring-boot-starter</artifactId>
+            <version>${graphql.datetime.verison}</version>
+        </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
