--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build with Maven
+name: Build and push Docker image
 
 on:
   push:
@@ -9,6 +9,7 @@ env:
 
 jobs:
   build_and_push:
+    name: Build and push
     runs-on: ubuntu-latest
 
     steps:
