--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,7 @@ spring:
             resourceserver:
                 jwt:
                     issuer-uri: http://auth-server:8089
+                    jwk-set-uri: http://auth-server:8089/.well-known/jwks.json
 
 
 
