--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.3</version>
+        <version>2.7.6</version>
         <relativePath/>
     </parent>
     <groupId>com</groupId>
@@ -16,14 +16,14 @@
 
     <properties>
         <java.version>17</java.version>
-        <kotlin.version>1.7.10</kotlin.version>
-        <testcontainers.version>1.17.3</testcontainers.version>
+        <kotlin.version>1.7.21</kotlin.version>
+        <testcontainers.version>1.17.6</testcontainers.version>
         <kotlinx.coroutines.version>1.6.4</kotlinx.coroutines.version>
-        <mockk.version>1.12.4</mockk.version>
+        <mockk.version>1.13.2</mockk.version>
         <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
-        <micrometer.version>1.9.3</micrometer.version>
+        <micrometer.version>1.10.1</micrometer.version>
         <logstash.version>7.2</logstash.version>
-        <postgresql.version>42.5.0</postgresql.version>
+        <postgresql.version>42.5.1</postgresql.version>
         <maven.failsafe.version>2.22.2</maven.failsafe.version>
     </properties>
 
@@ -122,7 +122,7 @@
         </dependency>
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>mockk-jvm</artifactId>
             <version>${mockk.version}</version>
             <scope>test</scope>
         </dependency>
