--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.datasource.username=user
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.jakarta.persistence.sharedCache.mode=UNSPECIFIED
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-backend-service:8089
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-backend-service:8089/.well-known/jwks.json
@@ -23,6 +24,6 @@ symbol.search.delay.time=3600000
 
 token.name=accessToken
 
-logging.level.root=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
