--- a/k8s/postgres/postgresql.yaml
+++ b/k8s/postgres/postgresql.yaml
@@ -26,7 +26,7 @@ spec:
               value: "rootpass"
           volumeMounts:
             - name: "postgres-data-dir"
-              mountPath: "/data/db"
+              mountPath: "/data/db/postgres"
       volumes:
         - name: "postgres-data-dir"
           persistentVolumeClaim:
