--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ cookie.duration=3600000
 refresh.token.duration=30
 
 authorization.base.url=http://auth-backend-service:8089
-consumer.base.url=http://stock-analyzer:8088
+consumer.base.url=http://stock-analyzer-service:8088
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health,info,prometheus,env
 
