--- a/k8s/postgres/postgres-persistence.yaml
+++ b/k8s/postgres/postgres-persistence.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-data
+  name: pv-postgres
 spec:
   storageClassName: manual
-  accessModes:
-    - ReadWriteOnce
   capacity:
     storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
   hostPath:
-    path: /data/postgres
+    path: "/mnt/data/postgres"
 
 ---
 
