--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 authorization.base.url=http://auth-backend-service:8089
-consumer.base.url=http://stock-analyzer-service:8088
+consumer.base.url=http://stock-fetcher-service:8088
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health,info,prometheus,env
 
 spring.datasource.password=password
 spring.datasource.url=jdbc:postgresql://postgres-service/stockdb
 spring.datasource.username=user
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
