--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.5</version>
+        <version>3.1.0</version>
         <relativePath/>
     </parent>
     <groupId>com</groupId>
@@ -16,16 +16,16 @@
 
     <properties>
         <java.version>17</java.version>
-        <kotlin.version>1.8.20</kotlin.version>
-        <testcontainers.version>1.18.0</testcontainers.version>
-        <kotlinx.coroutines.version>1.6.4</kotlinx.coroutines.version>
-        <mockk.version>1.13.4</mockk.version>
+        <kotlin.version>1.8.21</kotlin.version>
+        <testcontainers.version>1.18.1</testcontainers.version>
+        <kotlinx.coroutines.version>1.7.1</kotlinx.coroutines.version>
+        <mockk.version>1.13.5</mockk.version>
         <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
         <micrometer.version>1.10.5</micrometer.version>
         <logstash.version>7.3</logstash.version>
         <postgresql.version>42.5.4</postgresql.version>
-        <maven.failsafe.version>2.22.2</maven.failsafe.version>
-        <jib.version>3.3.1</jib.version>
+        <maven.failsafe.version>3.1.0</maven.failsafe.version>
+        <jib.version>3.3.2</jib.version>
     </properties>
 
     <dependencies>
@@ -178,6 +178,7 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven.failsafe.version}</version>
                 <executions>
