Added Fastfinance consumer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 authorization.base.url=http://auth-backend-service:8089
 consumer.base.url=http://stock-fetcher-service:8088
+fastfinance.base.url="http://fastfinance-service:8079
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health,info,prometheus,env
 
