--- a/k8s/stockcomp.yaml
+++ b/k8s/stockcomp.yaml
@@ -33,29 +33,7 @@ metadata:
 spec:
   selector:
     app: stockcomp
-  type: NodePort
   ports:
-    - protocol: TCP
-      port: 8080
+    - port: 8080
       targetPort: 8080
-      nodePort: 30111
 
----
-
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: ingress-contest-server
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: "contestserver.io"
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: stockcomp-service
-                port:
-                  number: 8080
