Added scheduled tasks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-authorization.base.url=http://auth-backend-service:8089
+authorization.base.url=http://auth-backend-service:80
 consumer.base.url=http://stock-fetcher-service:8088
 fastfinance.base.url=http://fastfinance-service:8000
 management.endpoint.health.show-details=always
@@ -12,11 +12,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=UNSPECIFIED
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-backend-service:8089
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-backend-service:8089/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-backend-service:80
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-backend-service:80/server/.well-known/jwks.json
+
+spring.task.scheduling.pool.size=6
 
 symbol.search.delay.time=3600000
 
